packages/mgt/src/components/mgt-person-card/mgt-person-card.scss
/**
 * -------------------------------------------------------------------------------------------
 * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
 * See License in the project root for license information.
 * -------------------------------------------------------------------------------------------
 */

@import '../../styles/shared-styles.scss';
@import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';

$person-card-display-name-font-size: var(--person-card-display-name-font-size, 20px);
$person-card-title-font-size: var(--person-card-title-font-size, 14px);
$person-card-subtitle-font-size: var(--person-card-subtitle-font-size, 12px);
$person-card-details-title-font-size: var(--person-card-details-title-font-size, 14px);
$person-card-details-item-font-size: var(--person-card-details-item-font-size, 15px);
$person-card-display-name-color: var(--person-card-display-name-color, #333333);
$person-card-title-color: var(--person-card-title-color, #797775);
$person-card-subtitle-color: var(--person-card-subtitle-color, #797775);
$person-card-details-title-color: var(--person-card-details-title-color, #000000);
$person-card-details-item-color: var(--person-card-details-item-color, #201f1e);
$person-card-background-color: var(--person-card-background-color, #ffffff);

:host {
  background: $person-card-background-color;
  width: var(--mgt-flyout-set-width, 340px);
  font-family: var(--default-font-family);
  overflow: hidden;

  .nav {
    display: flex;

    .nav__back {
      padding: 10px;
      display: flex;
      align-items: center;
      justify-content: center;

      svg {
        fill: #0078d4;
      }

      &:hover {
        cursor: pointer;

        svg {
          fill: #000000;
        }
      }
    }
  }

  .person-details-container {
    display: grid;
    grid-template-rows: auto 1fr;
    grid-template-columns: auto 1fr;
    padding: 15px 15px 20px 15px;

    .person-image {
      --presence-background-color: var(--person-card-background-color, #ffffff);
      --presence-icon-color: var(--person-card-background-color, #ffffff);
      --avatar-size: 75px;
    }

    .details {
      margin-left: 14px;
      line-height: 1.15;
      display: flex;
      flex-direction: column;
      position: relative;
      overflow: hidden;
      text-overflow: ellipse;
      white-space: nowrap;
      background-color: transparent;
      width: 100%;
      margin-top: 5px;

      .display-name {
        font-size: $person-card-display-name-font-size;
        color: $person-card-display-name-color;
        &::after {
          content: '';
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0;
          right: 0;
          background: linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
          background: -moz-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
          background: -o-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
          background: -ms-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
          background: -webkit-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
        }
      }

      .job-title {
        font-size: $person-card-title-font-size;
        color: $person-card-title-color;
      }

      .department {
        font-size: $person-card-subtitle-font-size;
        color: $person-card-subtitle-color;
      }
    }

    .base-icons {
      display: flex;
      -webkit-align-items: center;
      align-items: center;
      max-width: 120px;

      .icon {
        display: flex;
        align-items: center;
        cursor: pointer;
        font-size: 12px;
        white-space: nowrap;

        &:not(:last-child) {
          margin-right: 20px;
        }

        svg {
          fill: #605e5c;
        }

        span {
          margin-left: 8px;
          color: #0078d4;
        }
      }
      .icon:hover {
        color: #004578;
      }
    }
  }

  .expanded-details-container {
    display: flex;
    flex-direction: column;
    position: relative;

    .expanded-details-button {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 28px;
      background: #f3f2f1;
      border-top: 1px solid rgba(196, 196, 196, 0.4);
      .expanded-details-svg {
        margin-bottom: 3px;
      }
    }
    .expanded-details-button:hover {
      background-color: rgba(0, 0, 0, 0.068);
    }
    .expanded-details-info {
      padding: 18px;
      display: flex;
      flex-direction: column;

      .contact-text {
        margin: 0 0 24px 0;
        font-weight: 600;
        font-size: $person-card-details-title-font-size;
        color: $person-card-details-title-color;
      }

      .icons {
        line-height: normal;
        font-style: normal;
        font-weight: normal;
        font-size: $person-card-details-item-font-size;
        color: $person-card-details-item-color;
        text-align: left;

        .details-icon {
          margin: 0 0 10px 0;
          display: flex;
          flex-direction: row;
          align-items: center;
        }
      }
      .data {
        display: block;
        margin: 0 0 0px 10px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        width: 280px;
      }
      .normal-subtitle {
        padding-top: 2px;
      }
      .link-subtitle {
        color: #3078cd;
        cursor: pointer;
      }
      .link-subtitle:hover {
        opacity: 0.6;
      }
    }
    .section-divider {
      width: 96%;
      min-height: 1px;
      background: #eaeaea;
      align-self: center;
    }
  }

  .section-nav {
    display: flex;
    padding: 0 14px;
    border-bottom: 1px solid #edebe9;

    .section-nav__icon {
      all: initial;
      box-sizing: border-box;
      width: 48px;
      padding: 12px;
      display: flex;
      align-items: center;
      justify-content: center;
      border-bottom: 2px solid transparent;
      margin-bottom: -1px;
      cursor: pointer;

      svg {
        width: 20px;
        height: 20px;
        fill: #605e5c;
      }

      &:hover {
        background: #f3f2f1;
        border-color: #a19f9d;
      }

      &.active {
        border-color: #0078d4;

        svg {
          fill: #0078d4;
        }
      }
    }
  }

  .section-host {
    max-height: 600px;
    overflow-y: auto;
    overflow-x: hidden;
  }

  .quick-message {
    display: flex;
    flex-direction: row;
    padding: 8px 10px;
    border-bottom: 1px solid #e8e8e8;

    .quick-message__input {
      flex-grow: 1;
      padding-left: 8px;
      border: 2px solid #f3f2f1;
      border-radius: 2px;
      background-color: #f3f2f1;
    }

    .quick-message__send {
      all: initial;
      height: 32px;
      width: 32px;
      display: flex;
      align-items: center;
      justify-content: center;

      svg {
        fill: #605e5c;
        height: 18px;
        width: 18px;
      }

      &:hover {
        svg {
          fill: #000000;
        }
      }
    }
  }

  .sections {
    .section {
      padding: 14px 0;
      display: flex;
      flex-direction: column;
      position: relative;

      &:not(:last-child) {
        border-bottom: 1px solid #eaeaea;
      }

      .section__header {
        display: flex;
        flex-direction: row;
        padding: 0 20px;
      }

      .section__title {
        flex-grow: 1;
        color: #323130;
        font-size: 14px;
        font-weight: 600;
      }

      .section__show-more {
        color: #0078d4;
        font-size: 12px;
        font-weight: 600;
        align-self: center;

        &:hover {
          cursor: pointer;
          color: #004578;
        }
      }

      .section__content {
        margin-top: 14px;
      }
    }
  }
}

